[gd_scene load_steps=63 format=3 uid="uid://cbn4wmm11rwci"]

[ext_resource type="Script" path="res://map_tutorial.gd" id="1_q52le"]
[ext_resource type="Texture2D" uid="uid://i4cip2v38e1p" path="res://Sprites/campfire-pixilart (2) (1).png" id="2_4qkq8"]
[ext_resource type="FontFile" uid="uid://h2jqhx6xxsxq" path="res://Fonts/Terminal-Grotesque-master/terminal-grotesque.ttf" id="2_bkqke"]
[ext_resource type="Texture2D" uid="uid://2bw7mfleqav" path="res://Sprites/chicken_high_res.png" id="2_mflf2"]
[ext_resource type="Texture2D" uid="uid://c0ombn2kquclu" path="res://Sprites/bull icon.png" id="4_iwh6h"]
[ext_resource type="Texture2D" uid="uid://booogbq2hbnmx" path="res://Sprites/treasure.PNG" id="5_58ks8"]
[ext_resource type="Texture2D" uid="uid://6d2j8j8h7e18" path="res://Sprites/boss.PNG" id="6_b6qfr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j1h4b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83u82"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3hy0b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_70p23"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q7l5c"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y66vl"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dcx14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_d2hp6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s8ym5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cstq4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u1a7b"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xni6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q1reh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oeush"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hvsag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_67cj4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ohaut"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_e6c01"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_flskh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_707tt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_hxcp1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4c60"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6drup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_x5sek"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4v65k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4mr81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jovur"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_58bu7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ukt7i"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_00d47"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_fyxbj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2mbh3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lfgdf"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mj5ag"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yg8lg"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i1i87"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yygat"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nxpfp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dcftk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_guu6d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mifgd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_m3nci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_i26c7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_vw1c4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gxdac"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rtnqa"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_djseh"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_t0b34"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bpqq8"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gbfuq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8f3ve"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mdlxn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_khh1t"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_574pn"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y3yj5"]

[node name="MapTutorialInterface" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q52le")

[node name="CampfirePrompt" type="Button" parent="."]
layout_mode = 0
offset_left = 345.0
offset_top = 342.0
offset_right = 804.0
offset_bottom = 410.0
mouse_filter = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bkqke")
theme_override_font_sizes/font_size = 13
theme_override_styles/focus = SubResource("StyleBoxEmpty_j1h4b")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_83u82")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3hy0b")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_70p23")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_q7l5c")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_y66vl")
theme_override_styles/hover = SubResource("StyleBoxEmpty_dcx14")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_d2hp6")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_s8ym5")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_cstq4")
theme_override_styles/normal = SubResource("StyleBoxEmpty_u1a7b")
text = "This is a campfire room. Selecting it will heal you to full health. 
(Space to continue)"
icon = ExtResource("2_4qkq8")

[node name="MonsterPrompt" type="Button" parent="."]
layout_mode = 0
offset_left = 321.0
offset_top = 332.0
offset_right = 1258.0
offset_bottom = 588.0
scale = Vector2(0.41, 0.41)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bkqke")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_3xni6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_q1reh")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_oeush")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_hvsag")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_67cj4")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_ohaut")
theme_override_styles/hover = SubResource("StyleBoxEmpty_e6c01")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_flskh")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_707tt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_hxcp1")
theme_override_styles/normal = SubResource("StyleBoxEmpty_s4c60")
text = "Welcome to the map! This is a monster room.
Here you can fight base level enemies. 
(Space to continue, tab to skip tutorial)"
icon = ExtResource("2_mflf2")

[node name="ElitePrompt" type="Button" parent="."]
layout_mode = 0
offset_left = 326.0
offset_top = 325.0
offset_right = 1142.0
offset_bottom = 525.0
scale = Vector2(0.52, 0.52)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bkqke")
theme_override_font_sizes/font_size = 31
theme_override_styles/focus = SubResource("StyleBoxEmpty_6drup")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_x5sek")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_4v65k")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_4mr81")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_jovur")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_58bu7")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ukt7i")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_00d47")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_fyxbj")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_2mbh3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lfgdf")
text = "This is an elite room.
 The enemies here will be slightly harder, 
but they will give you better rewards. 
(Space to continue)"
icon = ExtResource("4_iwh6h")

[node name="TreasurePrompt" type="Button" parent="."]
layout_mode = 0
offset_left = 351.0
offset_top = 340.0
offset_right = 788.0
offset_bottom = 409.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bkqke")
theme_override_styles/focus = SubResource("StyleBoxEmpty_mj5ag")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_yg8lg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_i1i87")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_yygat")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_nxpfp")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_dcftk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_guu6d")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mifgd")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_m3nci")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_i26c7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_vw1c4")
text = "This is a treasure room. Selecting it will give you 
the option to choose between several rewards. 
(Space to continue)"
icon = ExtResource("5_58ks8")

[node name="BossPrompt" type="Button" parent="."]
layout_mode = 0
offset_left = 354.0
offset_top = 338.0
offset_right = 941.0
offset_bottom = 493.0
scale = Vector2(0.58, 0.58)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_bkqke")
theme_override_font_sizes/font_size = 21
theme_override_styles/focus = SubResource("StyleBoxEmpty_gxdac")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_rtnqa")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_djseh")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_t0b34")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bpqq8")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_gbfuq")
theme_override_styles/hover = SubResource("StyleBoxEmpty_8f3ve")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_mdlxn")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_khh1t")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_574pn")
theme_override_styles/normal = SubResource("StyleBoxEmpty_y3yj5")
text = "Scroll up to see the boss room. 
If you beat the boss, you win the game! 
Press space to exit 
the tutorial and click on 
the first monster room to start your run!"
icon = ExtResource("6_b6qfr")
